--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -87,6 +87,7 @@ structure of the pattern library
 @import "4_blocks/mainsheet";
 @import "4_blocks/modal";
 @import "4_blocks/mode-bar";
+@import "4_blocks/nav-bar";
 @import "4_blocks/mode-bar-dash";
 @import "4_blocks/mode-context";
 @import "4_blocks/toolbar";
