--- a/assets/sass/_settings.scss
+++ b/assets/sass/_settings.scss
@@ -63,8 +63,10 @@ body.rtl-namespace {
 \*------------------------------------*/
 
 // color scheme foundation
-$color-primary: #373E46; // faded blue
-$color-secondary: #FFC334; // gold
+//$color-primary: #373E46; // faded blue
+//$color-secondary: #FFC334; // gold
+$color-primary: #004174; // dark RS blue
+$color-secondary: #FFC334; // ligjt RS blue
 $color-tertiary: #C7CCD4; // pale grey
 
 // blacks and dark greys
